--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+kls_database.db
+.fleet/
+composeApp/schemas/
